--- a/index.html
+++ b/index.html
@@ -87,19 +87,13 @@
         <div class="container text-center pb-5">
           <div class="row">
             <div class="col">
-              <span class="counter display-3 text-white-50 d-block"></span>
-              <span
-                id="astros"
-                class="counter display-3 text-white-50 d-block"
-              ></span>
+              <span class="text-white-50 d-block"></span>
+              <span id="astros" class="h2 text-white-50 d-block"></span>
               <span class="h5 text-white-50">People in Space</span>
             </div>
             <div class="col">
-              <span class="counter display-3 text-white-50 d-block"></span>
-              <span
-                id="speed"
-                class="counter display-3 text-white-50 d-block"
-              ></span>
+              <span class="text-white-50 d-block"></span>
+              <span id="speed" class="h2 text-white-50 d-block"></span>
               <span class="h5 text-white-50">the Speed of ISS</span>
             </div>
           </div>
@@ -209,7 +203,6 @@
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
     <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
-    <script src="@@path/vendor/countup.js/dist/countUp.umd.js"></script>
     <!-- People in Space -->
     <script>
       fetch(`http://api.open-notify.org/astros.json`)
