korjattu vaihtoehtoista tekstiä

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
           document.getElementById("apodimg").innerHTML =
             "<img src=" +
             responseJson.url +
-            " class='d-block w-100' alt='image of space'>";
+            " class='d-block w-100' alt='astronomy picture of the day'>";
         });
     </script>
   </body>
