--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
   </head>
   <body id="page-top">
     <!-- Navigation-->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+    <nav
+      class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top"
+      id="mainNav"
+    >
       <div class="container px-4 px-lg-5">
         <a class="navbar-brand" href="#page-top">All Things Space</a>
         <button
